--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon ."
+    "dev": "node ."
   },
   "keywords": [],
   "author": "",
