--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "canvas": "^2.11.2"
+    "canvas": "^2.11.2",
+    "fluent-ffmpeg": "^2.1.2",
+    "sharp": "^0.32.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
